# CatacombGL

./: .gitignore  CMakeLists.txt  README.md  TC-mingw.cmake
VS2015/: CatacombGL.sln
VS2017/: CatacombGL.sln
VS2019/: CatacombGL.sln
res/win/: CatacombGL.rc  resource.h
src/Abyss/: Abyss.vcxproj  Abyss.vcxproj.filters  AudioRepositoryAbyss.h  CMakeLists.txt  DecorateAll.h  DecorateBonus.h  DecorateMisc.h  DecorateMonsters.h  DecorateProjectiles.h  DecorateV112.cpp  DecorateV112.h  EgaGraphAbyss.h  GameAbyss.cpp  GameAbyss.h  GameDetectionAbyss.h  GameMapsAbyss.h  GameMapsAbyssV112.cpp  GameMapsAbyssV112.h  IntroViewAbyss.cpp  IntroViewAbyss.h  SavedGameConverterAbyss.cpp  SavedGameConverterAbyss.h  SavedGameInDosFormatConfigAbyss.h
src/Apocalypse/: Apocalypse.vcxproj  Apocalypse.vcxproj.filters  AudioRepositoryApocalypse.h  CMakeLists.txt  DecorateAll.h  DecorateBonus.h  DecorateMisc.h  DecorateMonsters.h  DecorateProjectiles.h  EgaGraphApocalypse.h  GameApocalypse.cpp  GameApocalypse.h  GameDetectionApocalypse.h  GameMapsApocalypse.h  IntroViewApocalypse.cpp  IntroViewApocalypse.h  SavedGameConverterApocalypse.cpp  SavedGameConverterApocalypse.h  SavedGameInDosFormatConfigApocalypse.h
src/Armageddon/: Armageddon.vcxproj  Armageddon.vcxproj.filters  AudioRepositoryArmageddon.h  CMakeLists.txt  DecorateAll.h  DecorateBonus.h  DecorateMisc.h  DecorateMonsters.h  DecorateProjectiles.h  EgaGraphArmageddon.h  GameArmageddon.cpp  GameArmageddon.h  GameDetectionArmageddon.h  GameMapsArmageddon.h  IntroViewArmageddon.cpp  IntroViewArmageddon.h  SavedGameConverterArmageddon.cpp  SavedGameConverterArmageddon.h  SavesGameInDosFormatConfigArmageddon.h
src/Catacomb3D/: AudioRepositoryCatacomb3D.h  CMakeLists.txt  Catacomb3D.vcxproj  Catacomb3D.vcxproj.filters  Catacomb3DMenu.cpp  Catacomb3DMenu.h  DecorateAll.h  DecorateBonus.h  DecorateMisc.h  DecorateMonsters.h  DecorateProjectiles.h  EgaGraphCatacomb3D.h  GameCatacomb3D.cpp  GameCatacomb3D.h  GameDetectionCatacomb3D.h  GameMapsCatacomb3D.h  GuiElementBindGameControllerCat3D.cpp  GuiElementBindGameControllerCat3D.h  GuiElementBindKeyCat3D.cpp  GuiElementBindKeyCat3D.h  GuiElementBoolSelectionCat3D.cpp  GuiElementBoolSelectionCat3D.h  GuiElementButtonCat3D.cpp  GuiElementButtonCat3D.h  GuiElementEnumSelectionCat3D.cpp  GuiElementEnumSelectionCat3D.h  GuiElementEnumSelectionCat3DRadio.cpp  GuiElementEnumSelectionCat3DRadio.h  GuiElementIntSelectionCat3D.cpp  GuiElementIntSelectionCat3D.h  GuiElementListCat3D.cpp  GuiElementListCat3D.h  GuiElementSaveSlotEditableCat3D.cpp  GuiElementSaveSlotEditableCat3D.h  GuiElementSaveSlotStaticCat3D.cpp  GuiElementSaveSlotStaticCat3D.h  GuiPageFrameCat3D.cpp  GuiPageFrameCat3D.h  IntroViewCatacomb3D.cpp  IntroViewCatacomb3D.h  (+5 more)
src/Engine/: Actor.cpp  Actor.h  AdlibSound.cpp  AdlibSound.h  AudioPlayer.cpp  AudioPlayer.h  AudioRepository.cpp  AudioRepository.h  AutoMap.cpp  AutoMap.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ConfigurationSettings.cpp  ConfigurationSettings.h  Console.cpp  Console.h  ConsoleVariable.cpp  ConsoleVariable.h  ConsoleVariableBool.cpp  ConsoleVariableBool.h  ConsoleVariableEnum.cpp  ConsoleVariableEnum.h  ConsoleVariableInt.cpp  ConsoleVariableInt.h  ConsoleVariableString.cpp  ConsoleVariableString.h  ControlsMap.cpp  ControlsMap.h  Decompressor.cpp  Decompressor.h  Decorate.h  DefaultFont.cpp  DefaultFont.h  EgaColor.h  EgaGraph.cpp  EgaGraph.h  Engine.vcxproj  Engine.vcxproj.filters  EngineCore.cpp  (+143 more)
src/System/: CMakeLists.txt  CatacombGL.cpp  Finder.cpp  Finder.h  OpenGLUtilityLocal.cpp  OpenGLUtilityLocal.h  RendererOpenGL.cpp  RendererOpenGL.h  SystemSDL.cpp  SystemSDL.h  WindowSDL.cpp  WindowSDL.h
src/Test/: CMakeLists.txt  CatacombGL_Test.vcxproj  CatacombGL_Test.vcxproj.filters  CommandLineParser_Test.cpp  CommandLineParser_Test.h  ConsoleVariableBool_Test.cpp  ConsoleVariableBool_Test.h  ConsoleVariableEnum_Test.cpp  ConsoleVariableEnum_Test.h  ConsoleVariableInt_Test.cpp  ConsoleVariableInt_Test.h  ConsoleVariableString_Test.cpp  ConsoleVariableString_Test.h  ControlsMap_Test.cpp  Decompressor_Test.cpp  FramesCounter_Test.cpp  FramesCounter_Test.h  GameAbyss_Test.cpp  GameAbyss_Test.h  GameApocalypse_Test.cpp  GameApocalypse_Test.h  GameArmageddon_Test.cpp  GameArmageddon_Test.h  GameCatacomb3D_Test.cpp  GameCatacomb3D_Test.h  GameStub.cpp  GameStub.h  GuiElementEditText_Test.cpp  GuiElementEditText_Test.h  GuiElementList_Test.cpp  GuiElementList_Test.h  GuiMenu_Test.cpp  GuiMenu_Test.h  Gui_TestBase.cpp  Gui_TestBase.h  HelpPages_Test.cpp  HelpPages_Test.h  LevelLocationNames_Test.cpp  LevelLocationNames_Test.h  PlayerInventory_Test.cpp  (+24 more)
src/Win32/: CatacombGL.aps  CatacombGL.cpp  CatacombGL.rc  CatacombGL.vcxproj  CatacombGL.vcxproj.filters  RendererOpenGLWin32.cpp  RendererOpenGLWin32.h  SystemWin32.cpp  SystemWin32.h  resource.h
