cmake_minimum_required(VERSION 3.16)
project(CatacombGL_Engine LANGUAGES CXX)

add_library( CatacombGL_Engine OBJECT
    Actor.cpp
    Actor.h
    AdlibSound.cpp
    AdlibSound.h
    AudioPlayer.cpp
    AudioPlayer.h
    AudioRepository.cpp
    AudioRepository.h
    AutoMap.cpp
    AutoMap.h
    ConfigurationSettings.cpp
    ConfigurationSettings.h
    Console.cpp
    Console.h
    ConsoleVariable.cpp
    ConsoleVariable.h
    ConsoleVariableBool.cpp
    ConsoleVariableBool.h
    ConsoleVariableEnum.cpp
    ConsoleVariableEnum.h
    ConsoleVariableInt.cpp
    ConsoleVariableInt.h
    ConsoleVariableString.cpp
    ConsoleVariableString.h
    ControlsMap.cpp
    ControlsMap.h
    Decompressor.cpp
    Decompressor.h
    Decorate.h
    DefaultFont.cpp
    DefaultFont.h
    EgaColor.h
    EgaGraph.cpp
    EgaGraph.h
    EngineCore.cpp
    EngineCore.h
    ExtraMenu.cpp
    ExtraMenu.h
    FadeEffect.cpp
    FadeEffect.h
    FileChunk.cpp
    FileChunk.h
    Font.cpp
    Font.h
    FramesCounter.cpp
    FramesCounter.h
    GameDetection.cpp
    GameDetection.h
    GameMaps.cpp
    GameMaps.h
    GameSelection.cpp
    GameSelection.h
    GameTimer.cpp
    GameTimer.h
    GuiCatalog.cpp
    GuiCatalog.h
    GuiElementBase.cpp
    GuiElementBase.h
    GuiElementBindKey.cpp
    GuiElementBindKey.h
    GuiElementBoolSelection.cpp
    GuiElementBoolSelection.h
    GuiElementButton.cpp
    GuiElementButton.h
    GuiElementEditText.cpp
    GuiElementEditText.h
    GuiElementEnumSelection.cpp
    GuiElementEnumSelection.h
    GuiElementHighScores.cpp
    GuiElementHighScores.h
    GuiElementIntSelection.cpp
    GuiElementIntSelection.h
    GuiElementList.cpp
    GuiElementList.h
    GuiElementStaticText.cpp
    GuiElementStaticText.h
    GuiMenu.cpp
    GuiMenu.h
    GuiPage.cpp
    GuiPage.h
    HelpPages.cpp
    HelpPages.h
    HighScores.cpp
    HighScores.h
    Huffman.cpp
    Huffman.h
    IGame.h
    IIntroView.cpp
    IIntroView.h
    IMenu.h
    IRenderer.h
    ISavedGameConverter.h
    ISystem.h
    Level.cpp
    Level.h
    LevelLocationNames.cpp
    LevelLocationNames.h
    LevelStatistics.cpp
    LevelStatistics.h
    Logging.cpp
    Logging.h
    ManaBar.cpp
    ManaBar.h
    OpenGLBasic.cpp
    OpenGLBasic.h
    OpenGLFrameBuffer.cpp
    OpenGLFrameBuffer.h
    OverscanBorder.cpp
    OverscanBorder.h
    PCSound.cpp
    PCSound.h
    Picture.cpp
    Picture.h
    PictureTable.cpp
    PictureTable.h
    PlayerActions.cpp
    PlayerActions.h
    PlayerInput.cpp
    PlayerInput.h
    PlayerInventory.cpp
    PlayerInventory.h
    Radar.cpp
    Radar.h
    Renderable3DScene.cpp
    Renderable3DScene.h
    Renderable3DTiles.cpp
    Renderable3DTiles.h
    Renderable3DWalls.cpp
    Renderable3DWalls.h
    RenderableAutoMapIso.cpp
    RenderableAutoMapIso.h
    RenderableAutoMapTopDown.cpp
    RenderableAutoMapTopDown.h
    RenderableLevelStatistics.cpp
    RenderableLevelStatistics.h
    RenderableOverscanBorder.cpp
    RenderableOverscanBorder.h
    RenderableSprites.cpp
    RenderableSprites.h
    RenderableText.cpp
    RenderableText.h
    RenderableTiles.cpp
    RenderableTiles.h
    SavedGameInDosFormat.cpp
    SavedGameInDosFormat.h
    SavedGameInDosFormatConfig.h
    SavedGameInDosFormatLoader.cpp
    SavedGameInDosFormatLoader.h
    SavedGamesInDosFormat.cpp
    SavedGamesInDosFormat.h
    Score.cpp
    Score.h
    Shape.cpp
    Shape.h
    SpriteTable.cpp
    SpriteTable.h
    TextureAtlas.cpp
    TextureAtlas.h
    ViewPorts.cpp
    ViewPorts.h
)

